# module11

./: .env  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: f7808535bc94_init.py  f901d033a76f_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
